@@ -1,5 +1,4 @@
 #define PQXX_HAVE_LO_TELL 1
-#define PQXX_HAVE_PQCANCEL 1
 #define PQXX_HAVE_PQCLIENTENCODING 1
 /* #undef PQXX_HAVE_PQDESCRIBEPORTAL */
 /* #undef PQXX_HAVE_PQENCRYPTPASSWORD */
